--- a/ios-telemed/Base.lproj/Main.storyboard
+++ b/ios-telemed/Base.lproj/Main.storyboard
@@ -23,9 +23,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1P5-NQ-BIf">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="1P5-NQ-BIf">
                                 <rect key="frame" x="0.0" y="20" width="375" height="598"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="idopontCell" textLabel="cRS-uY-G2I" detailTextLabel="UHo-QF-2d9" style="IBUITableViewCellStyleValue1" id="9pO-tm-zC3">
@@ -36,16 +35,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="cRS-uY-G2I">
-                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
+                                                    <rect key="frame" x="15" y="13" width="30" height="18"/>
                                                     <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="UHo-QF-2d9">
-                                                    <rect key="frame" x="316" y="12" width="44" height="20.5"/>
+                                                    <rect key="frame" x="322.5" y="14" width="37.5" height="17"/>
                                                     <autoresizingMask key="autoresizingMask"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
@@ -60,6 +59,12 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="1P5-NQ-BIf" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="20" symbolic="YES" id="6lq-iX-WSL"/>
+                            <constraint firstItem="1P5-NQ-BIf" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="6ye-50-X1I"/>
+                            <constraint firstAttribute="trailing" secondItem="1P5-NQ-BIf" secondAttribute="trailing" id="9pV-0b-zxz"/>
+                            <constraint firstItem="1P5-NQ-BIf" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ghh-z5-Wnl"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Időpontok" id="DUb-Cy-XMI">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Ig7-az-tnw">
@@ -88,30 +93,35 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Orvos neve" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8b5-zg-Cal">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Orvos neve" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8b5-zg-Cal">
                                 <rect key="frame" x="16" y="72" width="343" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="VEm-bD-TAc"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Helyszín" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9nF-q5-mym">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Helyszín" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9nF-q5-mym">
                                 <rect key="frame" x="16" y="110" width="343" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="zJY-J4-3S0"/>
+                                </constraints>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Időpont" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yst-1l-ICO">
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Időpont" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yst-1l-ICO">
                                 <rect key="frame" x="16" y="148" width="343" height="24"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="24" id="clf-ed-E8g"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="tqr-iJ-p0n">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="tqr-iJ-p0n">
                                 <rect key="frame" x="0.0" y="180" width="375" height="166"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <date key="date" timeIntervalSinceReferenceDate="516099653.20326698">
                                     <!--2017-05-10 09:00:53 +0000-->
                                 </date>
@@ -122,6 +132,21 @@
                             </datePicker>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yst-1l-ICO" firstAttribute="top" secondItem="9nF-q5-mym" secondAttribute="bottom" constant="8" symbolic="YES" id="2C9-77-exg"/>
+                            <constraint firstItem="9nF-q5-mym" firstAttribute="leading" secondItem="yst-1l-ICO" secondAttribute="leading" id="2GB-Oy-UUK"/>
+                            <constraint firstItem="8b5-zg-Cal" firstAttribute="trailing" secondItem="9nF-q5-mym" secondAttribute="trailing" id="5ak-gz-CwL"/>
+                            <constraint firstAttribute="trailing" secondItem="tqr-iJ-p0n" secondAttribute="trailing" id="EYC-z4-ICP"/>
+                            <constraint firstItem="yst-1l-ICO" firstAttribute="centerX" secondItem="tqr-iJ-p0n" secondAttribute="centerX" id="HsG-zA-v6I"/>
+                            <constraint firstItem="9nF-q5-mym" firstAttribute="top" secondItem="8b5-zg-Cal" secondAttribute="bottom" constant="8" symbolic="YES" id="KVr-wY-cOO"/>
+                            <constraint firstItem="8b5-zg-Cal" firstAttribute="leading" secondItem="9nF-q5-mym" secondAttribute="leading" id="LuU-XR-9J6"/>
+                            <constraint firstItem="P7a-3w-9nD" firstAttribute="top" secondItem="tqr-iJ-p0n" secondAttribute="bottom" constant="272" id="l2M-nL-B8F"/>
+                            <constraint firstItem="tqr-iJ-p0n" firstAttribute="top" secondItem="yst-1l-ICO" secondAttribute="bottom" constant="8" symbolic="YES" id="l4L-db-lDy"/>
+                            <constraint firstItem="8b5-zg-Cal" firstAttribute="top" secondItem="gpw-Z6-hEr" secondAttribute="bottom" constant="8" symbolic="YES" id="lu7-7D-wCQ"/>
+                            <constraint firstItem="8b5-zg-Cal" firstAttribute="leading" secondItem="6vc-5N-kCW" secondAttribute="leadingMargin" id="nyq-Zg-gAV"/>
+                            <constraint firstItem="tqr-iJ-p0n" firstAttribute="leading" secondItem="6vc-5N-kCW" secondAttribute="leading" id="r7X-BK-phh"/>
+                            <constraint firstItem="9nF-q5-mym" firstAttribute="trailing" secondItem="yst-1l-ICO" secondAttribute="trailing" id="tz0-af-qI1"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Új időpont" id="29h-PF-LNN">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="246-ew-eTP">
